debathena-pam-config (1.21) unstable; urgency=low

  * Build-dep on debathena-gdm

 -- Jonathan Reed <jdreed@mit.edu>  Thu, 16 Aug 2012 15:27:32 -0400

debathena-pam-config (1.20) unstable; urgency=low

  * Set XDG_CACHE_HOME to something on local disk if the user's homedir is
    in AFS (or an approximation thereof) (Trac: #1109 and #1162)
  * Bump Standards-Version

 -- Jonathan Reed <jdreed@mit.edu>  Sat, 30 Jun 2012 10:31:39 -0400

debathena-pam-config (1.19) unstable; urgency=low

  * Explain that Kerberos errors can be caused by @ signs (Trac: #612)

 -- Jonathan Reed <jdreed@mit.edu>  Thu, 31 May 2012 09:24:41 -0400

debathena-pam-config (1.18.3) unstable; urgency=low

  * No change rebuild to pick up config-package-dev 4.13 changes

 -- Jonathan Reed <jdreed@mit.edu>  Wed, 26 Oct 2011 18:30:33 -0400

debathena-pam-config (1.18.2) unstable; urgency=low

  * DEB_REMOVE_FILES conflicting pam-auth-update config file shipped in
    libpam-afs-session 1.7-2. We do this for two reasons: we want to get
    tokens in the cell of the user's home directory and the reason
    documented in README.pam-afs-session. (Trac: #679)

 -- Liz A. Denys <lizdenys@mit.edu>  Wed, 06 Oct 2010 02:24:04 -0400

debathena-pam-config (1.18.1) unstable; urgency=low

  * Only configure libpam-afs-session as a session module, not an auth
    module, to work around a bad interaction with sudo.

 -- Evan Broder <broder@mit.edu>  Tue, 06 Apr 2010 23:50:25 -0400

debathena-pam-config (1.18) unstable; urgency=low

  * Replace libpam-athena-locker with libpam-afs-session. (Trac: #316)
  * Bump debhelper compatibility.
  * Bump standards version.

 -- Evan Broder <broder@mit.edu>  Sun, 04 Apr 2010 13:05:47 -0400

debathena-pam-config (1.17) unstable; urgency=low

  * Only enable libpam-krb524 if krb4 is actually available. (Trac: #418)

 -- Evan Broder <broder@mit.edu>  Sun, 15 Nov 2009 16:36:44 -0500

debathena-pam-config (1.16.3) unstable; urgency=low
